# hpc_lab

./: README.md
lab1/: README.md  RotateBlend.cpp  RotateBlend.sln  RotateBlend.vcxproj  RotateBlend.vcxproj.filters  StdAfx.h  app.cpp  dd.cpp  resource.h
lab1/src/: RotateBlend.aps  RotateBlend.psess  RotateBlend.rc  RotateBlend.sln  UpgradeLog.htm  app.cpp  bitmap.cpp
lab_1/: README.md
lab_1/src/: RotateBlend.dsp  RotateBlend.dsw  StdAfx.cpp
lab_2/: CMakeLists.txt  README.md
lab_2/cpu_test/: submit.sh  test.c
lab_2/gpu_test/: a.out  submit.sh  test.cu
lab_2/measure/: measure_data.md
lab_2/p1/: Makefile  main.c  submit.sh
lab_2/p1/engine/: proj_engine.h
lab_2/p1/engine/test/: main.c  test_bign
lab_2/src/: .main.c.swp  main.c  submit.sh
lab_2/src/engine/test/: Makefile  test_engine.cpp
lab_3/: CMakeLists.txt  Makefile  README.md  main.c  main_dilu.c  submit.sh
lab_3/data/: Makefile  main.c  read_a.c  read_b.c
lab_3/src/: main.c  submit.sh
lab_4/: README.md
lab_4/src/: KMeans.scala
lab_5/: README.md
lab_5/src/: hyperanf.cpp  hyperloglog.h  pagerank_ddf.cpp
